get rid of column and row classes

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -75,7 +75,7 @@
 				</ul>
 				<div class="tab-content" id="myTabContent">
 					<div class="tab-pane fade show active" id="about-tab-pane" role="tabpanel" aria-labelledby="about-tab" tabindex="0">
-						<div class="row_t">
+						<div class="d-flex">
 							<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 						</div>
 						<br>
@@ -215,7 +215,7 @@
 						</button>
 					</div>
 				</div>
-				<div class="row_t">
+				<div class="d-flex">
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openHome()">
@@ -233,8 +233,8 @@
 					Log in
 				</h2>
 				<div class="frame">
-					<div class="row_t">
-						<div class="column_t">
+					<div class="d-flex">
+						<div class="d-flex flex-column">
 							<div class="label">
 								Username:
 							</div>
@@ -242,13 +242,13 @@
 								Password:
 							</div>
 						</div>
-						<div class="column_t">
+						<div class="d-flex flex-column">
 							<input type="text">
 							<input type="password">
 						</div>
 					</div>
 				</div>
-				<div class="row_t">
+				<div class="d-flex">
 					<button type="button" class="button" onclick="openSignup()">
 						<img class="icon" height="22" src="icons/list-add-user.svg">
 						<div class="label">
@@ -278,8 +278,8 @@
 					Sign up
 				</h2>
 				<div class="frame">
-					<div class="row_t">
-						<div class="column_t">
+					<div class="d-flex">
+						<div class="d-flex flex-column">
 							<div class="label">
 								Username:
 							</div>
@@ -290,14 +290,14 @@
 								Confirm password:
 							</div>
 						</div>
-						<div class="column_t">
+						<div class="d-flex flex-column">
 							<input type="text">
 							<input type="password">
 							<input type="password">
 						</div>
 					</div>
 				</div>
-				<div class="row_t">
+				<div class="d-flex">
 					<div class="spacer">
 					</div>
 					<button type="button" class="button" onclick="openLogin()">
