better implementation for disabled buttons

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -74,7 +74,7 @@
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
-					<div class="active border mb-1 mx-1 p-1 position-relative show tab-pane" id="about-tab-pane" role="tabpanel" aria-labelledby="about-tab" tabindex="0">
+					<div class="active border mb-1 mx-1 p-1 position-relative rounded show tab-pane" id="about-tab-pane" role="tabpanel" aria-labelledby="about-tab" tabindex="0">
 						<div class="d-flex">
 							<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 						</div>
@@ -93,7 +93,7 @@
 						<br>
 						This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
 					</div>
-					<div class="border mb-1 mx-1 p-1 position-relative tab-pane" id="components-tab-pane" role="tabpanel" aria-labelledby="components-tab" tabindex="0">
+					<div class="border mb-1 mx-1 p-1 position-relative rounded tab-pane" id="components-tab-pane" role="tabpanel" aria-labelledby="components-tab" tabindex="0">
 						<b>
 							 Bootstrap
 						</b>
@@ -147,7 +147,7 @@
 							</a>
 						</button>
 					</div>
-					<div class="border mb-1 mx-1 p-1 position-relative tab-pane" id="authors-tab-pane" role="tabpanel" aria-labelledby="authors-tab" tabindex="0">
+					<div class="border mb-1 mx-1 p-1 position-relative rounded tab-pane" id="authors-tab-pane" role="tabpanel" aria-labelledby="authors-tab" tabindex="0">
 						<b>
 							Bruno Pierre Bouchard
 						</b>
@@ -257,7 +257,7 @@
 							Cancel
 						</div>
 					</button>
-					<button type="button" class="border button d-flex inactive m-1 rounded shadow-sm">
+					<button type="button" class="border button d-flex m-1 rounded shadow-sm" disabled>
 						<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
 						<div class="label my-auto">
 							OK
@@ -296,7 +296,7 @@
 							Cancel
 						</div>
 					</button>
-					<button type="button" class="border button d-flex inactive m-1 rounded shadow-sm">
+					<button type="button" class="border button d-flex m-1 rounded shadow-sm" disabled>
 						<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
 						<div class="my-auto">
 							OK
