remove useless label class

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -53,7 +53,7 @@
 		</div>
 		<div class="position-fixed shadow start-50 top-50" id="about">
 			<div class="bg-body border container d-flex flex-column p-1 rounded">
-				<h2 class="m-1">
+				<h2 class="m-1 pe-none">
 					The Great Avocado War of '24
 				</h2>
 				<ul class="border-bottom-0 flex-nowrap me-auto ms-1 mt-1 nav nav-tabs position-relative rounded-top" id="myTab" role="tablist">
@@ -227,15 +227,15 @@
 		</div>
 		<div class="position-fixed shadow start-50 top-50" id="login">
 			<div class="bg-body border container d-flex flex-column p-1 rounded">
-				<h2 class="m-1">
+				<h2 class="m-1 pe-none">
 					Log in
 				</h2>
 				<div class="border d-flex frame m-1 rounded">
 					<div class="d-flex flex-column">
-						<div class="label my-auto text-end">
+						<div class="my-auto pe-none text-end">
 							Username:
 						</div>
-						<div class="label my-auto text-end">
+						<div class="my-auto pe-none text-end">
 							Password:
 						</div>
 					</div>
@@ -247,19 +247,19 @@
 				<div class="d-flex">
 					<button type="button" class="border button d-flex m-1 rounded shadow-sm text-nowrap" onclick="openSignup()">
 						<img class="icon m-1" height="22" src="icons/list-add-user.svg">
-						<div class="label my-auto">
+						<div class="my-auto pe-none">
 							Sign up
 						</div>
 					</button>
 					<button type="button" class="border button d-flex m-1 ms-auto rounded shadow-sm" onclick="openHome()">
 						<img class="icon m-1" height="22" src="icons/dialog-cancel.svg">
-						<div class="label my-auto">
+						<div class="my-auto pe-none">
 							Cancel
 						</div>
 					</button>
-					<button type="button" class="border button d-flex m-1 rounded shadow-sm" disabled>
+					<button type="button" class="border button d-flex m-1 pe-none rounded shadow-sm" disabled>
 						<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
-						<div class="label my-auto">
+						<div class="my-auto">
 							OK
 						</div>
 					</button>
@@ -268,18 +268,18 @@
 		</div>
 		<div class="position-fixed shadow start-50 top-50" id="signup">
 			<div class="bg-body border container d-flex flex-column p-1 rounded">
-				<h2 class="m-1">
+				<h2 class="m-1 pe-none">
 					Sign up
 				</h2>
 				<div class="border d-flex frame m-1 rounded">
 					<div class="d-flex flex-column">
-						<div class="label my-auto text-end">
+						<div class="my-auto pe-none text-end">
 							Username:
 						</div>
-						<div class="label my-auto text-end">
+						<div class="my-auto pe-none text-end">
 							Password:
 						</div>
-						<div class="label my-auto text-end">
+						<div class="my-auto pe-none text-end">
 							Confirm password:
 						</div>
 					</div>
@@ -296,7 +296,7 @@
 							Cancel
 						</div>
 					</button>
-					<button type="button" class="border button d-flex m-1 rounded shadow-sm" disabled>
+					<button type="button" class="border button d-flex m-1 pe-none rounded shadow-sm" disabled>
 						<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
 						<div class="my-auto">
 							OK
